# anki_task_bar

./: CHANGELOG.md  HOT_RELOAD.md  README.md  USER_GUIDE.md  __init__.py  __version__.py  anki_task.ankiaddon  anki_task_bar.ankiaddon  ankitask.ankiaddon  bridge.py  config.json  daily_stats.db  daily_stats.py  deck_tree.json  hot_reload.py  managers.py  manifest.json  meta.json  pyproject.toml  requirements.txt  selected_decks.json  sessions.json  setup.py  taskui.py  test_random_arrangement.md
web/: common.js  confetti.js  hot-reload.js  index.2js  index.html  index.js  script.js  select-deck.html  select-deck.js  sessions.css  sessions.html  sessions.js  setting.css  setting.html  setting.js  style.css  tour.js
web/locales/: de.json  en.json  es.json  fr.json  ja.json  si.json  zh.json
