[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-taskbar"
version = "1.0.1"
description = "A modern task management interface for Anki"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Agampodige", email = ""}
]
maintainers = [
    {name = "Agampodige", email = ""}
]
keywords = ["anki", "task", "management", "productivity", "flashcards"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "PyQt6>=6.0.0",
    "PyQt6-WebEngine>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/Agampodige/anki_task_bar"
Documentation = "https://github.com/Agampodige/anki_task_bar/blob/main/README.md"
Repository = "https://github.com/Agampodige/anki_task_bar.git"
"Bug Reports" = "https://github.com/Agampodige/anki_task_bar/issues"
Changelog = "https://github.com/Agampodige/anki_task_bar/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["anki_task_bar"]
include-package-data = true

[tool.setuptools.package-data]
anki_task_bar = ["web/*", "web/assets/*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["anki_task_bar"]
